Check best model

--- a/experiments/exp-model-selection.ipynb
+++ b/experiments/exp-model-selection.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -265,22 +265,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>glove-hh-test araneum_none_fasttextskipgram_30...</td>\n",
+       "      <th>246</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...</td>\n",
        "      <td>Logistic</td>\n",
-       "      <td>0.785662</td>\n",
+       "      <td>0.797426</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test</td>\n",
+       "      <th>225</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...</td>\n",
        "      <td>Logistic</td>\n",
-       "      <td>0.779412</td>\n",
+       "      <td>0.797059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>elmo_ru-news_wmt11-16_1.5M_steps word2vec-hh-test</td>\n",
+       "      <th>198</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps fasttext-hh-t...</td>\n",
        "      <td>Logistic</td>\n",
-       "      <td>0.779412</td>\n",
+       "      <td>0.797059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -288,23 +288,45 @@
       ],
       "text/plain": [
        "                                        embedding_name classifier_name  \\\n",
-       "111  glove-hh-test araneum_none_fasttextskipgram_30...        Logistic   \n",
-       "36      elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test        Logistic   \n",
-       "39   elmo_ru-news_wmt11-16_1.5M_steps word2vec-hh-test        Logistic   \n",
+       "246  elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...        Logistic   \n",
+       "225  elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...        Logistic   \n",
+       "198  elmo_ru-news_wmt11-16_1.5M_steps fasttext-hh-t...        Logistic   \n",
        "\n",
        "     accuracy  \n",
-       "111  0.785662  \n",
-       "36   0.779412  \n",
-       "39   0.779412  "
+       "246  0.797426  \n",
+       "225  0.797059  \n",
+       "198  0.797059  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results_datas_df.sort_values([\"accuracy\"], ascending=False).head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['elmo_ru-news_wmt11-16_1.5M_steps',\n",
+       " 'glove-hh-test',\n",
+       " 'araneum_none_fasttextskipgram_300_5_2018']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_datas_df.sort_values([\"accuracy\"], ascending=False)[\"embedding_name\"].values[0].split(\" \")"
    ]
   },
   {
@@ -316,20 +338,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "0.785\n"
+      "['elmo_ru-news_wmt11-16_1.5M_steps', 'glove-hh-test', 'araneum_none_fasttextskipgram_300_5_2018']\n",
+      "3\n",
+      "0.8095238095238095\n"
      ]
     }
    ],
    "source": [
-    "best_names = [\"glove-hh-test\", \"araneum_none_fasttextskipgram_300_5_2018\"]\n",
+    "best_names = results_datas_df.sort_values(\n",
+    "    [\"accuracy\"], ascending=False\n",
+    ")[\"embedding_name\"].values[0].split(\" \")\n",
+    "print(best_names)\n",
+    "\n",
     "embed_combination = [embed for embed in embeds if embed[\"name\"] in best_names]\n",
     "print(len(embed_combination))\n",
     "\n",
@@ -340,11 +367,18 @@
     "    LogisticRegression(),\n",
     "    X,\n",
     "    Y,\n",
-    "    cv=KFold(n_splits=100, shuffle=True, random_state=34)\n",
+    "    cv=KFold(n_splits=168, shuffle=True, random_state=34)\n",
     ")\n",
     "\n",
     "print(np.mean(scores))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
