--- a/experiments/exp-model-selection.ipynb
+++ b/experiments/exp-model-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from collections import namedtuple\n",
     "\n",
@@ -32,14 +33,14 @@
    "source": [
     "## Load embeds\n",
     "\n",
-    "Each embed object is dict with `name` (name of the model), `X` (embedding matrixx), `Y` (labels) keys\n",
+    "Each embed object is dict with `name` (name of the model), `X` (embedding matrix), `Y` (labels) keys\n",
     "\n",
     "Now we expect that `X` from each model is in the same order (but in future we should add `ids`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +111,53 @@
    "source": [
     "## Define classificators\n",
     "\n",
-    "Define classificators and gris search params for them"
+    "Define classificators and grid search params for them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Classifier = namedtuple(\"Classifier\", \"name clf\")"
+    "Classifier = namedtuple(\"Classifier\", \"name gcv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifiers = [\n",
-    "    Classifier(\"Logistic\", OneVsRestClassifier(LogisticRegression())),\n",
-    "    Classifier(\"KNN\", KNeighborsClassifier()),\n",
-    "    Classifier(\"SVC\", OneVsRestClassifier(SVC()))\n",
+    "    Classifier(\n",
+    "        \"Logistic\",\n",
+    "        GridSearchCV(\n",
+    "            OneVsRestClassifier(LogisticRegression()),\n",
+    "            {\n",
+    "                \"estimator__C\": [0.1, 1, 10]\n",
+    "            }\n",
+    "        )\n",
+    "    ),\n",
+    "    Classifier(\n",
+    "        \"KNN\",\n",
+    "        GridSearchCV(\n",
+    "            KNeighborsClassifier(),\n",
+    "            {\n",
+    "                \"n_neighbors\": [1, 3, 5, 10],\n",
+    "                \"metric\": [\"minkowski\", \"euclidean\"]\n",
+    "            }\n",
+    "        )\n",
+    "    ),\n",
+    "    Classifier(\n",
+    "        \"SVC\",\n",
+    "        GridSearchCV(\n",
+    "            OneVsRestClassifier(SVC()),\n",
+    "            {\n",
+    "                \"estimator__kernel\": [\"linear\", \"rbf\"]\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
     "]"
    ]
   },
@@ -146,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3216936e7bb140c79386913b0871e11d",
+       "model_id": "b4559a812480428988d563dd7d7cc84c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,16 +232,21 @@
     "    name = \" \".join([embed[\"name\"] for embed in embed_combination])\n",
     "    \n",
     "    for classifier in classifiers:\n",
-    "        scores = cross_val_score(classifier.clf, X, Y, cv=cv)\n",
+    "        # set own cv to classifier\n",
+    "        classifier.gcv.cv = cv\n",
+    "        \n",
+    "        # fit\n",
+    "        classifier.gcv.fit(X, Y)\n",
     "        \n",
     "        result_datas.append((\n",
     "            name,\n",
     "            classifier.name,\n",
-    "            np.mean(scores)\n",
+    "            classifier.gcv.best_score_,\n",
+    "            str(classifier.gcv.best_params_)\n",
     "        ))\n",
     "        \n",
     "results_datas_df = pd.DataFrame(result_datas)\n",
-    "results_datas_df.columns = [\"embedding_name\", \"classifier_name\", \"accuracy\"]"
+    "results_datas_df.columns = [\"embedding_name\", \"classifier_name\", \"accuracy\", \"params\"]"
    ]
   },
   {
@@ -234,99 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>embedding_name</th>\n",
-       "      <th>classifier_name</th>\n",
-       "      <th>accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...</td>\n",
-       "      <td>Logistic</td>\n",
-       "      <td>0.797426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...</td>\n",
-       "      <td>Logistic</td>\n",
-       "      <td>0.797059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>elmo_ru-news_wmt11-16_1.5M_steps fasttext-hh-t...</td>\n",
-       "      <td>Logistic</td>\n",
-       "      <td>0.797059</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        embedding_name classifier_name  \\\n",
-       "246  elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...        Logistic   \n",
-       "225  elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...        Logistic   \n",
-       "198  elmo_ru-news_wmt11-16_1.5M_steps fasttext-hh-t...        Logistic   \n",
-       "\n",
-       "     accuracy  \n",
-       "246  0.797426  \n",
-       "225  0.797059  \n",
-       "198  0.797059  "
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results_datas_df.sort_values([\"accuracy\"], ascending=False).head(3)"
+    "results_datas_df.sort_values([\"accuracy\"], ascending=False).head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['elmo_ru-news_wmt11-16_1.5M_steps',\n",
-       " 'glove-hh-test',\n",
-       " 'araneum_none_fasttextskipgram_300_5_2018']"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results_datas_df.sort_values([\"accuracy\"], ascending=False)[\"embedding_name\"].values[0].split(\" \")"
+    "results_datas_df.sort_values([\"accuracy\"], ascending=False).to_csv(\n",
+    "    \"../results/results.csv\",\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
@@ -338,19 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['elmo_ru-news_wmt11-16_1.5M_steps', 'glove-hh-test', 'araneum_none_fasttextskipgram_300_5_2018']\n",
-      "3\n",
-      "0.8095238095238095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_names = results_datas_df.sort_values(\n",
     "    [\"accuracy\"], ascending=False\n",
@@ -372,13 +317,6 @@
     "\n",
     "print(np.mean(scores))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
