Minor fixes in exp

--- a/experiments/exp-model-selection.ipynb
+++ b/experiments/exp-model-selection.ipynb
@@ -192,22 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = KFold(n_splits=10, shuffle=True, random_state=23)"
+    "cv = KFold(n_splits=12, shuffle=True, random_state=23)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4559a812480428988d563dd7d7cc84c",
+       "model_id": "c8dfca49781945e09307c2b9b4c5a73f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,6 +217,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -265,16 +272,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>embedding_name</th>\n",
+       "      <th>classifier_name</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...</td>\n",
+       "      <td>Logistic</td>\n",
+       "      <td>0.797619</td>\n",
+       "      <td>{'estimator__C': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps</td>\n",
+       "      <td>Logistic</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>{'estimator__C': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps araneum_upos_...</td>\n",
+       "      <td>Logistic</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>{'estimator__C': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps word2vec-hh-test</td>\n",
+       "      <td>Logistic</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>{'estimator__C': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>elmo_ru-news_wmt11-16_1.5M_steps araneum_upos_...</td>\n",
+       "      <td>Logistic</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>{'estimator__C': 1}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        embedding_name classifier_name  \\\n",
+       "246  elmo_ru-news_wmt11-16_1.5M_steps glove-hh-test...        Logistic   \n",
+       "0                     elmo_ru-news_wmt11-16_1.5M_steps        Logistic   \n",
+       "282  elmo_ru-news_wmt11-16_1.5M_steps araneum_upos_...        Logistic   \n",
+       "39   elmo_ru-news_wmt11-16_1.5M_steps word2vec-hh-test        Logistic   \n",
+       "42   elmo_ru-news_wmt11-16_1.5M_steps araneum_upos_...        Logistic   \n",
+       "\n",
+       "     accuracy               params  \n",
+       "246  0.797619  {'estimator__C': 1}  \n",
+       "0    0.785714  {'estimator__C': 1}  \n",
+       "282  0.785714  {'estimator__C': 1}  \n",
+       "39   0.785714  {'estimator__C': 1}  \n",
+       "42   0.785714  {'estimator__C': 1}  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_datas_df.sort_values([\"accuracy\"], ascending=False).head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['elmo_ru-news_wmt11-16_1.5M_steps', 'glove-hh-test', 'araneum_none_fasttextskipgram_300_5_2018']\n",
+      "3\n",
+      "0.8095238095238095\n"
+     ]
+    }
+   ],
    "source": [
     "best_names = results_datas_df.sort_values(\n",
     "    [\"accuracy\"], ascending=False\n",
@@ -317,6 +422,13 @@
     "\n",
     "print(np.mean(scores))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
