Rearranged project structure. Added Manager class

--- a/experiments/exp-model-selection.ipynb
+++ b/experiments/exp-model-selection.ipynb
@@ -374,7 +374,7 @@
    "outputs": [],
    "source": [
     "results_datas_df.sort_values([\"accuracy\"], ascending=False).to_csv(\n",
-    "    \"../results/results.csv\",\n",
+    "    \"results/results.csv\",\n",
     "    index=False\n",
     ")"
    ]
